New Features and Important Changes in GammaLib 1.7.0

8 November 2019


1. Introduction
---------------
This document briefly summarizes module by module the most important changes
made since the last release of GammaLib.


2. Public interface modifications
---------------------------------
The following classes have been added:
- none

The following classes have been removed:
- GCTAResponseCache::ndirs()
- GCTAResponseCache::nerecos()
- GCTAResponseCache::netrues()

The following classes have been renamed:
- none

The following methods have been added:
- GTime.datetime() - Datetime conversion in Python interface
- GGti::overlap(GTime&, GTime&) - Compute overlap with time interval
- GObservations::npred(string&, string&) - Compute predicted number of events
- GObservations::npred(GModel&, string&) - Compute predicted number of events 
- GObservations::remove_response_cache() - Remove response cache for all models
- GObservations::remove_response_cache(string&) - Remove response cache for model
- GObservation::remove_response_cache(string&) - Remove response cache for model
- GSkyMap::extract() - Extract section of sky map
- GCTAObservation::remove_response_cache(string&) - Remove response cache for model
- GCTAResponse::remove_response_cache(string&) - Remove response cache for model
- GCTAResponseCache::remove(string&) - Remove response cache for model
- GCOMObservation::drm(GModels&) - Compute model cube
- GCOMObservation::remove_response_cache(string&) - Remove response cache for model
- GCOMTim::save(GFilename&, bool&) - Save TIM into FITS file
- GCOMTim::write(GFitsBinTable&) - Write TIM into FITS binary table
- GCOMDri::cone_content() - Get DRI content within event cone 

The following methods have been removed:
- none

The following methods have been renamed:
- none

The arguments for the following methods have been changed:
- GTime::utc(int&) - Add optional precision value

The return value of the following methods has been changed:
- none

